--- a/templates/forest_fire.html
+++ b/templates/forest_fire.html
@@ -12,7 +12,7 @@
 
 <body>
 <div class="container justify-content-center mt-2">
-  <h1 class="text-white mt-2">Predict Forest Fire For Your Location</h1>
+  <h1 class="text-white mt-2">Forest Fire Prediction</h1>
   <h5 class="text-white ">Predict the percentage of Forest-Fire Occurence</h5>
   <form action='/predict' method="post">
    <div class="row">
@@ -55,3 +55,4 @@
 
   </body>
 </html>
+
